--- a/templates/search_data.html
+++ b/templates/search_data.html
@@ -768,8 +768,8 @@
         }
         .results-table th:nth-child(9), .results-table td:nth-child(9)  /* บริษัทที่รับงาน */
         {
-            min-width: 70px;
-            max-width: 80px; 
+            min-width: 60px;
+            max-width: 70px; 
         }
         
 
@@ -781,8 +781,8 @@
         overflow: hidden;      /* ซ่อนข้อความที่เกิน */
         text-overflow: ellipsis; /* แสดง ... */
         }
-        .results-table th:nth-child(13), .results-table td:nth-child(13) {
-        min-width: 60px; 
+        .results-table th:nth-child(13), .results-table td:nth-child(13) { /* ผู้รับงานตรวจ */
+        min-width: 45px; 
         }
 
         /* NEW: Modal Styles for Customer Details */
